--- a/MSVC/RavlImage.vcproj
+++ b/MSVC/RavlImage.vcproj
@@ -3,8 +3,8 @@
 	ProjectType="Visual C++"
 	Version="8.00"
 	Name="RavlImage"
-	ProjectGUID="{d185d525-1fdb-4d13-a796-27196cdcd9de}"
-        RootNamespace="RavlImage"
+	ProjectGUID="{D185D525-1FDB-4D13-A796-27196CDCD9DE}"
+	RootNamespace="RavlImage"
 	Keyword="win32Proj"
 	>
 	<Platforms>
@@ -24,8 +24,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="
-if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\default8x16.psf C:\Build\\default8x16.psf&#x0D;&#x0A;"
+				CommandLine="if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\default8x16.psf C:\Build\\default8x16.psf&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -103,8 +102,7 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="
-if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\default8x16.psf C:\Build\\default8x16.psf&#x0D;&#x0A;"
+				CommandLine="if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\default8x16.psf C:\Build\\default8x16.psf&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -133,8 +131,8 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 				ObjectFile="C:\Build\win32\opt\obj\RavlImage\"
 				ProgramDataBaseFileName="C:\Build\win32\opt\obj\RavlImage\"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="false"
 				SuppressStartupBanner="true"
+				Detect64BitPortabilityProblems="false"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -170,7 +168,6 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
-	
 	</Configurations>
 	<References>
 	</References>
@@ -179,13 +176,8 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 			Name="Source Files"
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
-			
 			<File
-				RelativePath="..\.\Image\Base\ImageRectangle.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\Image.cc"
+				RelativePath="..\.\Image\Base\ByteRGBAValue.cc"
 				>
 			</File>
 			<File
@@ -193,23 +185,27 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 				>
 			</File>
 			<File
+				RelativePath="..\.\Image\Base\ByteVYUValue.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\ByteYUV422Value.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\ByteYUVAValue.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\.\Image\Base\ByteYUVValue.cc"
 				>
 			</File>
 			<File
-				RelativePath="..\.\Image\Base\RealRGBValue.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\RealYUVValue.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\RGBcYUV.cc"
-				>
-			</File>
-			<File
 				RelativePath="..\.\Image\Base\Font.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\Image.cc"
 				>
 			</File>
 			<File
@@ -229,23 +225,23 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 				>
 			</File>
 			<File
-				RelativePath="..\.\Image\Base\ByteRGBAValue.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\ByteVYUValue.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\ByteYUV422Value.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\ByteYUVAValue.cc"
-				>
-			</File>
-			<File
 				RelativePath="..\.\Image\BaseSSE\ImageConvSSE.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\ImageRectangle.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\RealRGBValue.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\RealYUVValue.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\RGBcYUV.cc"
 				>
 			</File>
 		</Filter>
@@ -253,37 +249,8 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl"
 			>
-                        
 			<File
-				RelativePath="..\.\Image\Base\ImageRectangle.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\Image.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\RGBValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\ByteRGBValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\UInt16RGBValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\RealRGBValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\RGBAValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\ByteRGBAValue.hh"
+				RelativePath="..\.\Image\Base\BGRAValue.hh"
 				>
 			</File>
 			<File
@@ -291,15 +258,7 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 				>
 			</File>
 			<File
-				RelativePath="..\.\Image\Base\ByteBGRValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\RealBGRValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\BGRAValue.hh"
+				RelativePath="..\.\Image\Base\BilinearInterpolation.hh"
 				>
 			</File>
 			<File
@@ -307,51 +266,7 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 				>
 			</File>
 			<File
-				RelativePath="..\.\Image\Base\YUVValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\ByteYUVValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\RealYUVValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\YUVAValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\ByteYUVAValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\YUV422Value.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\ByteYUV422Value.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\VYUValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\ByteVYUValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\RealHSVValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\FixedPointHSVValue.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\IAValue.hh"
+				RelativePath="..\.\Image\Base\ByteBGRValue.hh"
 				>
 			</File>
 			<File
@@ -359,63 +274,31 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 				>
 			</File>
 			<File
+				RelativePath="..\.\Image\Base\ByteRGBAValue.hh"
+				>
+			</File>
+			<File
 				RelativePath="..\.\Image\Base\ByteRGBMedian.hh"
 				>
 			</File>
 			<File
-				RelativePath="..\.\Image\Base\RealRGBAverage.hh"
+				RelativePath="..\.\Image\Base\ByteRGBValue.hh"
 				>
 			</File>
 			<File
-				RelativePath="..\.\Image\Base\ScaleValues.hh"
+				RelativePath="..\.\Image\Base\ByteVYUValue.hh"
 				>
 			</File>
 			<File
-				RelativePath="..\.\Image\Base\Reflect.hh"
+				RelativePath="..\.\Image\Base\ByteYUV422Value.hh"
 				>
 			</File>
 			<File
-				RelativePath="..\.\Image\Base\RGBcYUV.hh"
+				RelativePath="..\.\Image\Base\ByteYUVAValue.hh"
 				>
 			</File>
 			<File
-				RelativePath="..\.\Image\Base\ImageConv.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\Font.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\PSFFont.h"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\DrawFrame.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\DrawCross.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\DrawMask.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\DrawLine.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\DrawCircle.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\DrawPolygon.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Image\Base\DrawEllipse.hh"
+				RelativePath="..\.\Image\Base\ByteYUVValue.hh"
 				>
 			</File>
 			<File
@@ -423,7 +306,123 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 				>
 			</File>
 			<File
-				RelativePath="..\.\Image\Base\BilinearInterpolation.hh"
+				RelativePath="..\.\Image\Base\DrawCircle.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\DrawCross.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\DrawEllipse.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\DrawFrame.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\DrawLine.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\DrawMask.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\DrawPolygon.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\FixedPointHSVValue.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\Font.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\IAValue.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\Image.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\ImageConv.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\BaseSSE\ImageConvSSE.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\ImageRectangle.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\PSFFont.h"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\RealBGRValue.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\RealHSVValue.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\RealRGBAverage.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\RealRGBValue.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\RealYUVValue.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\Reflect.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\RGBAValue.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\RGBcYUV.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\RGBValue.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\ScaleValues.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\UInt16RGBValue.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\VYUValue.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\YUV422Value.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\YUVAValue.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\YUVValue.hh"
 				>
 			</File>
 		</Filter>
