--- a/MSVC/RavlLibGlade.vcproj
+++ b/MSVC/RavlLibGlade.vcproj
@@ -3,8 +3,8 @@
 	ProjectType="Visual C++"
 	Version="8.00"
 	Name="RavlLibGlade"
-	ProjectGUID="{87902fa6-5010-4adb-987d-f7ece1343f93}"
-        RootNamespace="RavlLibGlade"
+	ProjectGUID="{87902FA6-5010-4ADB-987D-F7ECE1343F93}"
+	RootNamespace="RavlLibGlade"
 	Keyword="win32Proj"
 	>
 	<Platforms>
@@ -24,10 +24,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="
-if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibgladecustommain.glade C:\Build\share\RAVL\Glade\exlibgladecustommain.glade&#x0D;&#x0A;
-if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibgladecustomwidget.glade C:\Build\share\RAVL\Glade\exlibgladecustomwidget.glade&#x0D;&#x0A;
-if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibglade.glade C:\Build\share\RAVL\Glade\exlibglade.glade&#x0D;&#x0A;"
+				CommandLine="if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibgladecustommain.glade C:\Build\share\RAVL\Glade\exlibgladecustommain.glade&#x0D;&#x0A;if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibgladecustomwidget.glade C:\Build\share\RAVL\Glade\exlibgladecustomwidget.glade&#x0D;&#x0A;if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibglade.glade C:\Build\share\RAVL\Glade\exlibglade.glade&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -105,10 +102,7 @@ if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="
-if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibgladecustommain.glade C:\Build\share\RAVL\Glade\exlibgladecustommain.glade&#x0D;&#x0A;
-if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibgladecustomwidget.glade C:\Build\share\RAVL\Glade\exlibgladecustomwidget.glade&#x0D;&#x0A;
-if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibglade.glade C:\Build\share\RAVL\Glade\exlibglade.glade&#x0D;&#x0A;"
+				CommandLine="if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibgladecustommain.glade C:\Build\share\RAVL\Glade\exlibgladecustommain.glade&#x0D;&#x0A;if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibgladecustomwidget.glade C:\Build\share\RAVL\Glade\exlibgladecustomwidget.glade&#x0D;&#x0A;if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;&#x0A;copy ..\.\GUI\LibGlade\exlibglade.glade C:\Build\share\RAVL\Glade\exlibglade.glade&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -137,8 +131,8 @@ if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;
 				ObjectFile="C:\Build\win32\opt\obj\RavlLibGlade\"
 				ProgramDataBaseFileName="C:\Build\win32\opt\obj\RavlLibGlade\"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="false"
 				SuppressStartupBanner="true"
+				Detect64BitPortabilityProblems="false"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -174,7 +168,6 @@ if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
-	
 	</Configurations>
 	<References>
 	</References>
@@ -183,17 +176,16 @@ if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;
 			Name="Source Files"
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
-			
 			<File
 				RelativePath="..\.\GUI\LibGlade\GladeWidget.cc"
 				>
 			</File>
 			<File
-				RelativePath="..\.\GUI\LibGlade\GladeXML.cc"
+				RelativePath="..\.\GUI\LibGlade\GladeWindow.cc"
 				>
 			</File>
 			<File
-				RelativePath="..\.\GUI\LibGlade\GladeWindow.cc"
+				RelativePath="..\.\GUI\LibGlade\GladeXML.cc"
 				>
 			</File>
 		</Filter>
@@ -201,17 +193,16 @@ if not exist C:\Build\share\RAVL\Glade\NUL mkdir C:\Build\share\RAVL\Glade&#x0D;
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl"
 			>
-                        
 			<File
 				RelativePath="..\.\GUI\LibGlade\GladeWidget.hh"
 				>
 			</File>
 			<File
-				RelativePath="..\.\GUI\LibGlade\GladeXML.hh"
+				RelativePath="..\.\GUI\LibGlade\GladeWindow.hh"
 				>
 			</File>
 			<File
-				RelativePath="..\.\GUI\LibGlade\GladeWindow.hh"
+				RelativePath="..\.\GUI\LibGlade\GladeXML.hh"
 				>
 			</File>
 		</Filter>
