--- a/MSVC/Ravl3DIO.vcproj
+++ b/MSVC/Ravl3DIO.vcproj
@@ -3,8 +3,8 @@
 	ProjectType="Visual C++"
 	Version="8.00"
 	Name="Ravl3DIO"
-	ProjectGUID="{07e7eab7-7e47-4d42-8187-07a3ee0d1ba9}"
-        RootNamespace="Ravl3DIO"
+	ProjectGUID="{07E7EAB7-7E47-4D42-8187-07A3EE0D1BA9}"
+	RootNamespace="Ravl3DIO"
 	Keyword="win32Proj"
 	>
 	<Platforms>
@@ -24,8 +24,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="
-if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#x0A;copy ..\.\3D\MeshIO\cube.tri C:\Build\share\RAVL\data\cube.tri&#x0D;&#x0A;"
+				CommandLine="if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#x0A;copy ..\.\3D\MeshIO\cube.tri C:\Build\share\RAVL\data\cube.tri&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -103,8 +102,7 @@ if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="
-if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#x0A;copy ..\.\3D\MeshIO\cube.tri C:\Build\share\RAVL\data\cube.tri&#x0D;&#x0A;"
+				CommandLine="if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#x0A;copy ..\.\3D\MeshIO\cube.tri C:\Build\share\RAVL\data\cube.tri&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -133,8 +131,8 @@ if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#
 				ObjectFile="C:\Build\win32\opt\obj\Ravl3DIO\"
 				ProgramDataBaseFileName="C:\Build\win32\opt\obj\Ravl3DIO\"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="false"
 				SuppressStartupBanner="true"
+				Detect64BitPortabilityProblems="false"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -170,7 +168,6 @@ if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
-	
 	</Configurations>
 	<References>
 	</References>
@@ -179,15 +176,6 @@ if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#
 			Name="Source Files"
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
-			
-			<File
-				RelativePath="..\.\3D\MeshIO\VRMLFileIO.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\3D\MeshIO\FormatVRMLFile.cc"
-				>
-			</File>
 			<File
 				RelativePath="..\.\3D\MeshIO\CTriFileIO.cc"
 				>
@@ -197,31 +185,7 @@ if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#
 				>
 			</File>
 			<File
-				RelativePath="..\.\3D\MeshIO\TriFileIO.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\3D\MeshIO\FormatTriFile.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\3D\MeshIO\MeshIOObj.cc"
-				>
-			</File>
-			<File
 				RelativePath="..\.\3D\MeshIO\FormatMeshObj.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\3D\MeshIO\TriMeshIO.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\3D\MeshIO\TexTriMeshIO.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\.\3D\MeshIO\POVRayFileIO.cc"
 				>
 			</File>
 			<File
@@ -229,11 +193,43 @@ if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#
 				>
 			</File>
 			<File
+				RelativePath="..\.\3D\MeshIO\FormatTriFile.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\3D\MeshIO\FormatVRMLFile.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\.\3D\MeshIO\MeshConv.cc"
 				>
 			</File>
 			<File
+				RelativePath="..\.\3D\MeshIO\MeshIOObj.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\3D\MeshIO\POVRayFileIO.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\.\3D\MeshIO\RavlMeshIO.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\3D\MeshIO\TexTriMeshIO.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\3D\MeshIO\TriFileIO.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\3D\MeshIO\TriMeshIO.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\3D\MeshIO\VRMLFileIO.cc"
 				>
 			</File>
 		</Filter>
@@ -241,19 +237,6 @@ if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl"
 			>
-                        
-			<File
-				RelativePath="..\.\3D\MeshIO\RavlMeshIO.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\3D\MeshIO\VRMLFileIO.hh"
-				>
-			</File>
-			<File
-				RelativePath="..\.\3D\MeshIO\FormatVRMLFile.hh"
-				>
-			</File>
 			<File
 				RelativePath="..\.\3D\MeshIO\CTriFileIO.hh"
 				>
@@ -263,7 +246,11 @@ if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#
 				>
 			</File>
 			<File
-				RelativePath="..\.\3D\MeshIO\TriFileIO.hh"
+				RelativePath="..\.\3D\MeshIO\FormatMeshObj.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\3D\MeshIO\FormatPOVRayFile.hh"
 				>
 			</File>
 			<File
@@ -271,11 +258,11 @@ if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#
 				>
 			</File>
 			<File
-				RelativePath="..\.\3D\MeshIO\MeshIOObj.hh"
+				RelativePath="..\.\3D\MeshIO\FormatVRMLFile.hh"
 				>
 			</File>
 			<File
-				RelativePath="..\.\3D\MeshIO\FormatMeshObj.hh"
+				RelativePath="..\.\3D\MeshIO\MeshIOObj.hh"
 				>
 			</File>
 			<File
@@ -283,7 +270,15 @@ if not exist C:\Build\share\RAVL\data\NUL mkdir C:\Build\share\RAVL\data&#x0D;&#
 				>
 			</File>
 			<File
-				RelativePath="..\.\3D\MeshIO\FormatPOVRayFile.hh"
+				RelativePath="..\.\3D\MeshIO\RavlMeshIO.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\3D\MeshIO\TriFileIO.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\3D\MeshIO\VRMLFileIO.hh"
 				>
 			</File>
 		</Filter>
